<resources>
    <string name="app_name" translatable="false">GymStat</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_drawer_settings">Settings</string>
    <string name="nav_drawer_libraries">Third party libraries</string>

    <!-- Routines Activity -->
    <string name="routines_free_workout">Start free workout</string>
    <string name="routines_new_routine">Create new routine</string>
    <string name="routines_no_routines">You have no saved routines.</string>
    <string name="routines_or_text">or</string>
    <string name="routines_add_exercise">Add exercise</string>
    <string name="routines_last_performed" formatted="false">Last Performed: %d days ago</string>
    <string name="routines_number_sets" formatted="false">x %d sets</string>
    <string name="routines_start_routine">Start routine</string>
    <string name="routines_monday">Mon</string>
    <string name="routines_tuesday">Tue</string>
    <string name="routines_wednesday">Wed</string>
    <string name="routines_thursday">Thur</string>
    <string name="routines_friday">Fri</string>
    <string name="routines_saturday">Sat</string>
    <string name="routines_sunday">Sun</string>

    <!-- Edit Routine Activity -->
    <string name="edit_routine_title">Edit routine</string>

    <!-- Workout Activity -->
    <string name="workout_add_exercise">Add exercise</string>
    <string name="workout_free_workout">Free workout</string>
    <string name="workout_sets">sets</string>
    <string name="workout_increment_sets">increment sets</string>
    <string name="workout_decrement_sets">decrement sets</string>

    <!-- Exercise List Activity -->
    <string name="exercise_list_activity_title">Pick an Exercise</string>

    <!-- Plate Calc Dialog -->
    <string name="plate_calc_bar_weight">Bar Weight:\u0020</string>
    <string name="plate_calc_title">Plate Calculator</string>

    <!-- Strings related to Settings -->
    <string name="settings_activity_title">Settings</string>
    <string name="settings_units">Units</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Settings for Units -->
    <string-array name="pref_weight_list_titles">
        <item>Pounds</item>
        <item>Kilograms</item>
    </string-array>
    <string-array name="pref_weight_list_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="pref_weight_selected_units">Selected weight units</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value"/>
    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Default Exercises -->
    <string name="e_bb_bench">Barbell Bench Press</string>
    <string name="e_db_bench">Dumbbell Bench Press</string>
    <string name="e_bb_squat">Barbell Squat</string>
    <string name="e_db_squat">Dumbbell Squat</string>
    <string name="e_bb_incline_bench">Barbell Incline Bench Press</string>
    <string name="e_db_incline_bench">Dumbbell Incline Bench Press</string>
    <string name="e_bb_decline_bench">Barbell Decline Bench Press</string>
    <string name="e_db_decline_bench">Dumbbell Decline Bench Press</string>
    <string name="e_bb_shoulder_press_standing">Standing Barbell Shoulder Press</string>
    <string name="e_db_shoulder_press_standing">Standing Dumbbell Shoulder Press</string>
    <string name="e_bb_shoulder_press_seated">Seated Barbell Shoulder Press</string>
    <string name="e_db_shoulder_press_seated">Seated Dumbbell Shoulder Press</string>
    <string name="e_bb_bicep_curl">Barbell Bicep Curl</string>
    <string name="e_db_bicep_curl">Dumbbell Bicep Curl</string>
    <string name="e_side_lateral_raise">Side Lateral Raise</string>
    <string name="e_lat_pulldown">Lat Pulldown</string>
    <string name="e_bb_tricep_extension">Barbell Tricep Extension</string>
    <string name="e_db_tricep_extension">Dumbbell Tricep Extension</string>

</resources>
