<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.jorbital.gymstat.views.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general"/>

    <header
        android:fragment="com.jorbital.gymstat.views.SettingsActivity$UnitsPreferenceFragment"
        android:icon="@drawable/ic_ruler"
        android:title="@string/units"/>

    <header
        android:fragment="com.jorbital.gymstat.views.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications"/>

    <header
        android:fragment="com.jorbital.gymstat.views.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync"/>

</preference-headers>
