<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vh"
            type="com.jorbital.gymstat.views.RoutinesAdapter.RoutineViewHolder"/>
    </data>

    <android.support.v7.widget.CardView
        android:id="@+id/routinesCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/routineItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:onClick="@{(view) -> vh.itemClicked(view)}">

            <TextView
                android:id="@+id/routineName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
                android:paddingStart="?android:attr/listPreferredItemPaddingStart"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Routine Name"/>

            <TextView
                android:id="@+id/lastPerformed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
                android:paddingStart="?android:attr/listPreferredItemPaddingStart"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/routineName"
                tools:text="Last Performed: XX days ago"/>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/routineWeekdayLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lastPerformed">

                <TextView
                    android:id="@+id/routineSunday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/routines_sunday"
                    android:textColor="@color/disabledText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/routineSaturday"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/routineMonday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/routines_monday"
                    android:textColor="@color/disabledText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/routineTuesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/routines_tuesday"
                    android:textColor="@color/disabledText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/routineMonday"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/routineWednesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/routines_wednesday"
                    android:textColor="@color/disabledText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/routineTuesday"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/routineThursday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/routines_thursday"
                    android:textColor="@color/disabledText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/routineWednesday"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/routineSaturday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/routines_saturday"
                    android:textColor="@color/disabledText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/routineFriday"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/routineFriday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/routines_friday"
                    android:textColor="@color/disabledText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/routineThursday"
                    app:layout_constraintTop_toTopOf="parent"/>
            </android.support.constraint.ConstraintLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/routineExercisesRV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
                android:paddingStart="?android:attr/listPreferredItemPaddingStart"
                android:paddingTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/routineWeekdayLayout"/>

            <Button
                android:id="@+id/startRoutineButton"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:onClick="@{(view) -> vh.buttonClicked(view)}"
                android:text="@string/routines_start_routine"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/routineExercisesRV"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</layout>